  major feature is the support for cookies to enable RESTful
  communication with the web service.

  Additionally, the system web browser can be opened by the `web` function.

- The `linspace` function now produces symmetrical sequences when the
  endpoints are symmetric.  This is more intuitive and also compatible
  with recent changes made in Matlab R2019b.

- The `edit` function option `"editinplace"` now defaults to `true` and
  the option `"home"` now defaults to the empty matrix `[]`.  Files will
  no longer be copied to the user's HOME directory for editing.  The old
  behavior can be restored by setting `"editinplace"` to `false` and
  `"home"` to `"~/octave"`.

- The `format` command supports two new options: `uppercase` and
  `lowercase` (default).  With the default, print a lowercase 'e' for
  the exponent character in scientific notation and lowercase 'a-f' for
  the hex digits representing 10-15.  With `uppercase`, print 'E' and
  'A-F' instead.  The previous uppercase formats, `E` and `G`, no longer
  control the case of the output.

  Additionally, the `format` command can be called with multiple options
  for controlling the format, spacing, and case in arbitrary order.
  For example:

        format long e uppercase loose

  Note, in the case of multiple competing format options the rightmost
  one is used, and, in case of an error, the previous format remains
  unchanged.

- New warnings have been added about questionable uses of the colon ':'
  range operator.  Each has a new warning ID so that it can be disabled
  if desired.

  >  `Octave:colon-complex-argument`   : when any arg is complex  
  >  `Octave:colon-nonscalar-argument` : when any arg is non-scalar

- The `regexp` and related functions now correctly handle and *require*
  strings in UTF-8 encoding.  As with any other function that requires
  strings to be encoded in Octave's native encoding, you can use
  `native2unicode` to convert from your preferred locale.  For example,