@@ -138,7 +138,7 @@ along with Octave; see the file COPYING.  If not, see
    static uint32_t randi32 (void)   returns 32-bit unsigned int
    static uint64_t randi53 (void)   returns 53-bit unsigned int
    static uint64_t randi54 (void)   returns 54-bit unsigned int
-   static float randu32 (void)      returns 32-bit uniform in (0,1)
+   static float randu24 (void)      returns 24-bit uniform in (0,1)
    static double randu53 (void)     returns 53-bit uniform in (0,1)
 
    double rand_uniform (void)       returns M-bit uniform in (0,1)
@@ -377,10 +377,17 @@ namespace octave
   }
 
   /* generates a random number on (0,1)-real-interval */
-  static float randu32 (void)
+  static float randu24 (void)
   {
-    return (static_cast<float> (randi32 ()) + 0.5) * (1.0/4294967296.0);
-    /* divided by 2^32 */
+    uint32_t i;
+
+    do
+      {
+        i = randi32 () & static_cast<uint32_t> (0xFFFFFF);
+      }
+    while (i == 0);
+
+    return i * (1.0f / 16777216.0f);
   }
 
   /* generates a random number on (0,1) with 53-bit resolution */
@@ -404,7 +411,7 @@ namespace octave
   float
   rand_uniform<float> (void)
   {
-    return randu32 ();
+    return randu24 ();
   }
 
   /* ===== Ziggurat normal and exponential generators ===== */
@@ -665,7 +672,7 @@ namespace octave
 #define ERANDI randi32() /* 32 bits for mantissa */
 #define NMANTISSA 2147483648.0 /* 31 bit mantissa */
 #define NRANDI randi32() /* 31 bits for mantissa + 1 bit sign */
-#define RANDU randu32()
+#define RANDU randu24()
 
   static ZIGINT fki[ZIGGURAT_TABLE_SIZE];
   static float fwi[ZIGGURAT_TABLE_SIZE], ffi[ZIGGURAT_TABLE_SIZE];
